智能助手小智v1.1:历史会话记忆优化，工具调用